# ScaleOutKeyswitch

./: .gitignore  .gitmodules  Context.py  Hardware.py  Makefile  README.md  accel_event.h  compute_unit.cc  compute_unit.h  context.cc  context.h  cpu.cc  cpu.h  hbm.cc  hbm.h  instruction.cc  instruction.h  openai-codex-0.118.0.tgz  pcie.cc  pcie.h  tutorial.py
CinnamonCompiler/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
CinnamonCompiler/cinnamon/: CMakeLists.txt  cinnamon.cpp  cinnamon.h  version.cpp  version.h
CinnamonCompiler/cinnamon/backend/: CMakeLists.txt  big_node.h  cinnamon.cc  cinnamon.h  cinnamon_compiler.h  isa_instruction.h  keyswitch_digits.h  keyswitch_pass.cc  keyswitch_pass.h  limb.h  limb_instruction.h  logger.h  polynomial_instruction.h  register_allocation.h  terms.h
CinnamonCompiler/cinnamon/frontend/: CMakeLists.txt  attribute_list.cpp  attribute_list.h  attributes.cpp  attributes.h  ops.h  program.cpp  program.h  term.cpp  term.h  term_map.h  types.h
CinnamonCompiler/cinnamon/util/: CMakeLists.txt  logging.cpp  logging.h  overloaded.h  program_traversal.h
CinnamonCompiler/examples/: examples.py
CinnamonCompiler/python/: CMakeLists.txt  setup.py.in
CinnamonCompiler/python/cinnamon/: CMakeLists.txt  __init__.py  wrapper.cpp
CinnamonCompiler/python/cinnamon/compiler/: __init__.py
CinnamonCompiler/python/cinnamon/dsl/: __init__.py
CinnamonCompiler/python/cinnamon/passes/: __init__.py
CinnamonCompiler/scripts/: clang-format-all.sh
CinnamonEmulator/: CMakeLists.txt  README.md
CinnamonEmulator/cinnamon_emulator/: CMakeLists.txt  arithmetic32.h  ckks-encoder.cpp  ckks-encoder.h  ckks-encryptor.cpp  ckks-encryptor.h  config.h  context.cpp  context.h  emulator.cpp  emulator.h  evaluator.cpp  evaluator.h  galois.cpp  galois.h  limb.h  multiply_uint_mod_operand.h  ntt.cpp  ntt.h  pointer.h  rns_polynomial.h  util.h
CinnamonEmulator/examples/: README.txt  instructions0  program_inputs  test.py
CinnamonEmulator/python/: CMakeLists.txt  setup.py.in
CinnamonEmulator/python/cinnamon_emulator/: CMakeLists.txt  __init__.py  wrapper.cpp
CinnamonEmulator/scripts/: clang-format-all.sh
CinnamonHLS/: .gitignore  CMakeLists.txt  README.md
CinnamonHLS/config/: hbm_memory_connectivity.cfg  hw_impl_high_effort.cfg
CinnamonHLS/golden/: tutorial3_inference_kernel_outputs.json  tutorial_add_kernel_outputs.json
CinnamonHLS/hls/tb/: tb_cinnamon_arithmetic.cpp  tb_cinnamon_automorphism.cpp  tb_cinnamon_base_conv.cpp  tb_cinnamon_memory.cpp  tb_cinnamon_montgomery.cpp  tb_cinnamon_ntt.cpp
CinnamonHLS/include/cinnamon_hls/: arithmetic_modular.hpp  automorphism.hpp  automorphism_payload_fixture.hpp  base_conv.hpp  base_conv_kernel.hpp  csim_test_api.hpp  math_utils.hpp  memory_models.hpp  montgomery.hpp  montgomery_kernel.hpp  ntt.hpp  transpose.hpp
CinnamonHLS/kernels/: cinnamon_arithmetic.cpp  cinnamon_automorphism.cpp  cinnamon_base_conv.cpp  cinnamon_base_conv_core.cpp  cinnamon_dispatch.cpp  cinnamon_memory.cpp  cinnamon_modmul.cpp  cinnamon_montgomery.cpp  cinnamon_montgomery_core.cpp  cinnamon_ntt.cpp  cinnamon_transpose.cpp  generated_ntt_tables.hpp  kernel_arithmetic_module.hpp  kernel_automorphism_module.hpp  kernel_base_conv_module.hpp  kernel_common.hpp  kernel_dispatch_module.hpp  kernel_memory_module.hpp  kernel_modmul_module.hpp  kernel_montgomery_module.hpp  kernel_ntt_module.hpp  kernel_payload_common.hpp  kernel_transpose_module.hpp  kernel_util.hpp
CinnamonHLS/python/: pyproject.toml
CinnamonHLS/python/cinnamon_fpga/: __init__.py  api.py  generated_ntt_tables.py  golden.py  parser.py  pyxrt_runner.py  smoke.py  tutorial3_decode.py
CinnamonHLS/python/cinnamon_fpga.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
CinnamonHLS/python/examples/: benchmark_tutorial3_inference.py  run_sw_test.py  sw_emu_plain_cpu_baseline_matrix.py  tutorial_add_fpga.py  tutorial_matmul_fpga.py  tutorial_mult_fpga.py  tutorial_rot_fpga.py  tutorial_sub_fpga copy.py  tutorial_sub_fpga.py  validate_fpga_backend.py  validate_full_opcode_dispatch.py
CinnamonHLS/python/tests/: test_api_helpers.py  test_benchmark_tutorial3_inference_helpers.py  test_parser.py  test_pyxrt_runner.py  test_rtl_vector_assets.py  test_runtime_dispatch.py  test_tutorial3_decode.py
CinnamonHLS/scripts/: build_xclbin.sh  build_xclbin_hw_50mhz.sh  cleanup_generated_artifacts.sh  debug_rot_output_directory.py  generate_ntt_tables.py  manage_hw50_link_detached.sh  plot_tutorial3_benchmark_report.py  run_csim.sh  run_fpga_backend_validation.sh  run_full_opcode_dispatch.sh  run_hls_csim_validation.sh  run_hw_50mhz.sh  run_hw_inference.sh  run_kernel_validation.sh  run_sw_emu.sh  run_sw_emu_rot_mul_pipeline.sh  run_sw_emu_smoke.sh  run_sw_emu_tutorial_suite.sh  run_tutorial3_benchmark.sh  run_tutorial3_swemu_debug.sh  summarize_csynth.py  summarize_hw_link.py
CinnamonHLS/tests/: test_arithmetic.cpp  test_automorphism.cpp  test_base_conv.cpp  test_base_conv_kernels.cpp  test_kernel_descriptor.cpp  test_memory.cpp  test_montgomery.cpp  test_montgomery_kernel.cpp  test_ntt.cpp  test_payload_runtime_helpers.cpp  test_transpose.cpp
CinnamonHLS/tests/csim/: tb_cinnamon_arithmetic.cpp  tb_cinnamon_automorphism.cpp  tb_cinnamon_base_conv.cpp  tb_cinnamon_memory.cpp  tb_cinnamon_modmul.cpp  tb_cinnamon_montgomery.cpp  tb_cinnamon_ntt.cpp  tb_cinnamon_transpose.cpp
CinnamonHLS/tests/vectors/: rtl_vectors.json
CinnamonRTL/: .gitignore  LICENSE.txt  Makefile  README.md  simulation.mk
CinnamonRTL/arithmetic/: Makefile  arithmetic_modular.sv
CinnamonRTL/automorphism/: Makefile  automorphism.sv
CinnamonRTL/base_conv/: Makefile  change_rns_base.sv  crb_mem.sv  rns_resolve.sv
CinnamonRTL/common/: Makefile  math.sv  rect_mem.sv  test_util.sv  util.sv  xvlog.pb
CinnamonRTL/montgomery_arithmetic/: Makefile  montgomery_multiplier.sv  (+4 more)
CinnamonSimulator/: .gitmodules  CMakeLists.txt  README.md
CinnamonTutorial/: README.md
scripts/: README.md  build_compiler_local.sh  build_emulator_local.sh  check_fpga_toolchain.sh  queue_hw_run.sh  setup_conda_fpga_env.sh  setup_seal.sh
(+69 files in other folders)
